--- a/_header.scss
+++ b/_header.scss
@@ -5,9 +5,13 @@
     div.header-logo{
 		padding:20px 0;
 
-		div.redes-tel{
-			text-align: right;
+		div.logo-center{
+			text-align: center;
+		}
 
+		div.redes{
+			text-align: right;
+			padding-top:30px;
 	        .redes_sociais_header{
 	            margin-top: 15px;
 	            margin-bottom: 10px;
@@ -26,65 +30,54 @@
 
 	        .redes_sociais_header a{
 	            display: inline-block;
-	            width:31px;
-	            height:31px;
+	            width:22px;
+	            height:22px;
 	        }
 
 	        .redes_sociais_header .youtube{
-	            background-image: url("images/redes_top.jpg");
+	            background-image: url("images/redes-top.png");
 	            background-position: 0px,center;
 	            background-repeat:no-repeat;
-	            width:31px;
-	            height:31px;
+	            width:28px;
+	            height:22px;
 	            display:inline-block;       
 	        }
 
 	        .redes_sociais_header .instagram{
-	            background-image: url("images/redes_top.jpg");
-	            background-position: -35px,center;
+	            background-image: url("images/redes-top.png");
+	            background-position: -25px,center;
 	            background-repeat:no-repeat;
-	            width:31px;
-	            height:31px;
+	            width:28px;
+	            height:22px;
 	            display:inline-block;       
 	        }
 
 	        .redes_sociais_header .twitter{
-	            background-image: url("images/redes_top.jpg");
-	            background-position: -70px,center;
+	            background-image: url("images/redes-top.png");
+	            background-position: -60px,center;
 	            background-repeat:no-repeat;
-	            width:31px;
-	            height:31px;
+	            width:28px;
+	            height:22px;
 	            display:inline-block;       
 	        }
 
 	        .redes_sociais_header .facebook{
-	            background-image: url("images/redes_top.jpg");
-	            background-position: -105px,center;
+	            background-image: url("images/redes-top.png");
+	            background-position: -92px,center;
 	            background-repeat:no-repeat;
-	            width:31px;
-	            height:31px;
+	            width:28px;
+	            height:22px;
 	            display:inline-block;       
 	        }    
 
-	        div.header-tel{
-	        	color:#ffc500;
-	        	font-size: 20px;
-	        }
 		}
     }   
 
     div.header-menu{
     	nav{
-    		border-radius: 10px;
-    		background-color:#ffc500;
 
 			div.menu-responsivo{
 				position:relative;
-
-				button{
-					border:0;
-					background-color:transparent;
-				}
 			}
 
     		ul.menu-principal{
@@ -92,41 +85,18 @@
     			margin: 0;
 
 				li{
-					border-right:1px solid #ffe14a;
-					border-left:1px solid #d4a700;
+					float:left;
 					list-style-type: none;
-				    display:table-cell;
-				    vertical-align: middle;
-					width: 10%;
-					height: 60px;
-					padding:10px;
 					
 					a{
-						color:white;
 						display: inline-block;
-						width: 100%;
+
 					}
 					a:hover{
 						text-decoration: none;
 					}
 				}
 
-				li:first-child{
-					border-left:0;
-				}
-				li:last-child{
-					border-right:0;
-				}
-
-				li:first-child:hover{
-					border-top-left-radius: 10px;
-					border-bottom-left-radius: 10px;				
-				}
-
-				li:last-child:hover{
-					border-top-right-radius: 10px;
-					border-bottom-right-radius: 10px;				
-				}
 
 				li:hover{
 
@@ -135,6 +105,27 @@
     		}
     	}
     }
+}
+
+@media (max-width: 991px) {  
+	div.redes{
+		text-align: left !important;
+		padding:0 !important;
+	}
+	
+	div.header-logo{
+		padding:0 !important;
+	}
+
+	div.menu-responsivo{
+		width: 50px;
+		text-align: left;
+		display: block;
+		padding: 10px;
+	}
+	ul.menu-principal{
+		display: none;
+	}
 }
 
 @media (min-width: 992px) {  
