--- a/style.css
+++ b/style.css
@@ -62,9 +62,12 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
     margin-bottom: 20px; }
     #page #header div.header-logo {
       padding: 20px 0; }
-      #page #header div.header-logo div.redes-tel {
-        text-align: right; }
-        #page #header div.header-logo div.redes-tel .redes_sociais_header {
+      #page #header div.header-logo div.logo-center {
+        text-align: center; }
+      #page #header div.header-logo div.redes {
+        text-align: right;
+        padding-top: 30px; }
+        #page #header div.header-logo div.redes .redes_sociais_header {
           margin-top: 15px;
           margin-bottom: 10px;
           height: 31px;
@@ -72,88 +75,119 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
           display: inline-block;
           padding-left: 10px;
           width: 160px; }
-        #page #header div.header-logo div.redes-tel .redes_sociais_header li:hover {
+        #page #header div.header-logo div.redes .redes_sociais_header li:hover {
           opacity: 0.6;
           filter: alpha(opacity=60);
           /* For IE8 and earlier */ }
-        #page #header div.header-logo div.redes-tel .redes_sociais_header a {
+        #page #header div.header-logo div.redes .redes_sociais_header a {
           display: inline-block;
-          width: 31px;
-          height: 31px; }
-        #page #header div.header-logo div.redes-tel .redes_sociais_header .youtube {
-          background-image: url("images/redes_top.jpg");
+          width: 22px;
+          height: 22px; }
+        #page #header div.header-logo div.redes .redes_sociais_header .youtube {
+          background-image: url("images/redes-top.png");
           background-position: 0px,center;
           background-repeat: no-repeat;
-          width: 31px;
-          height: 31px;
+          width: 28px;
+          height: 22px;
           display: inline-block; }
-        #page #header div.header-logo div.redes-tel .redes_sociais_header .instagram {
-          background-image: url("images/redes_top.jpg");
-          background-position: -35px,center;
+        #page #header div.header-logo div.redes .redes_sociais_header .instagram {
+          background-image: url("images/redes-top.png");
+          background-position: -25px,center;
           background-repeat: no-repeat;
-          width: 31px;
-          height: 31px;
+          width: 28px;
+          height: 22px;
           display: inline-block; }
-        #page #header div.header-logo div.redes-tel .redes_sociais_header .twitter {
-          background-image: url("images/redes_top.jpg");
-          background-position: -70px,center;
+        #page #header div.header-logo div.redes .redes_sociais_header .twitter {
+          background-image: url("images/redes-top.png");
+          background-position: -60px,center;
           background-repeat: no-repeat;
-          width: 31px;
-          height: 31px;
+          width: 28px;
+          height: 22px;
           display: inline-block; }
-        #page #header div.header-logo div.redes-tel .redes_sociais_header .facebook {
-          background-image: url("images/redes_top.jpg");
-          background-position: -105px,center;
+        #page #header div.header-logo div.redes .redes_sociais_header .facebook {
+          background-image: url("images/redes-top.png");
+          background-position: -92px,center;
           background-repeat: no-repeat;
-          width: 31px;
-          height: 31px;
+          width: 28px;
+          height: 22px;
           display: inline-block; }
-        #page #header div.header-logo div.redes-tel div.header-tel {
-          color: #ffc500;
-          font-size: 20px; }
-    #page #header div.header-menu nav {
-      border-radius: 10px;
-      background-color: #ffc500; }
-      #page #header div.header-menu nav div.menu-responsivo {
-        position: relative; }
-        #page #header div.header-menu nav div.menu-responsivo button {
-          border: 0;
-          background-color: transparent; }
-      #page #header div.header-menu nav ul.menu-principal {
-        padding: 0;
-        margin: 0; }
-        #page #header div.header-menu nav ul.menu-principal li {
-          border-right: 1px solid #ffe14a;
-          border-left: 1px solid #d4a700;
-          list-style-type: none;
-          display: table-cell;
-          vertical-align: middle;
-          width: 10%;
-          height: 60px;
-          padding: 10px; }
-          #page #header div.header-menu nav ul.menu-principal li a {
-            color: white;
-            display: inline-block;
-            width: 100%; }
-          #page #header div.header-menu nav ul.menu-principal li a:hover {
-            text-decoration: none; }
-        #page #header div.header-menu nav ul.menu-principal li:first-child {
-          border-left: 0; }
-        #page #header div.header-menu nav ul.menu-principal li:last-child {
-          border-right: 0; }
-        #page #header div.header-menu nav ul.menu-principal li:first-child:hover {
-          border-top-left-radius: 10px;
-          border-bottom-left-radius: 10px; }
-        #page #header div.header-menu nav ul.menu-principal li:last-child:hover {
-          border-top-right-radius: 10px;
-          border-bottom-right-radius: 10px; }
-        #page #header div.header-menu nav ul.menu-principal li:hover {
-          background-color: #ffdb62; }
+    #page #header div.header-menu nav div.menu-responsivo {
+      position: relative; }
+    #page #header div.header-menu nav ul.menu-principal {
+      padding: 0;
+      margin: 0; }
+      #page #header div.header-menu nav ul.menu-principal li {
+        float: left;
+        list-style-type: none; }
+        #page #header div.header-menu nav ul.menu-principal li a {
+          display: inline-block; }
+        #page #header div.header-menu nav ul.menu-principal li a:hover {
+          text-decoration: none; }
+      #page #header div.header-menu nav ul.menu-principal li:hover {
+        background-color: #ffdb62; }
+  @media (max-width: 991px) {
+    #page div.redes {
+      text-align: left !important;
+      padding: 0 !important; }
+    #page div.header-logo {
+      padding: 0 !important; }
+    #page div.menu-responsivo {
+      width: 50px;
+      text-align: left;
+      display: block;
+      padding: 10px; }
+    #page ul.menu-principal {
+      display: none; } }
   @media (min-width: 992px) {
     #page div.menu-responsivo {
       display: none; }
     #page ul.menu-principal {
       display: block; } }
+  #page div#content section#redes-bot .redes_sociais_bot {
+    margin-bottom: 5px;
+    height: 67px;
+    text-align: left;
+    list-style: none;
+    margin: 0 auto;
+    margin-top: 30px;
+    width: 310px;
+    padding: 0; }
+  #page div#content section#redes-bot .redes_sociais_bot li:hover {
+    opacity: 0.6;
+    filter: alpha(opacity=60);
+    /* For IE8 and earlier */ }
+  #page div#content section#redes-bot .redes_sociais_bot a {
+    display: inline-block;
+    width: 67px;
+    height: 67px; }
+  #page div#content section#redes-bot .redes_sociais_bot .youtube {
+    background-image: url("images/redes_bot.jpg");
+    background-position: left,center;
+    background-repeat: no-repeat;
+    width: 67px;
+    height: 67px;
+    display: inline-block; }
+  #page div#content section#redes-bot .redes_sociais_bot .instagram {
+    background-image: url("images/redes_bot.jpg");
+    background-position: -80px,center;
+    background-repeat: no-repeat;
+    width: 67px;
+    height: 67px;
+    display: inline-block; }
+  #page div#content section#redes-bot .redes_sociais_bot .twitter {
+    background-image: url("images/redes_bot.jpg");
+    background-position: -160px,center;
+    background-repeat: no-repeat;
+    width: 67px;
+    height: 67px;
+    display: inline-block; }
+  #page div#content section#redes-bot .redes_sociais_bot .facebook {
+    background-image: url("images/redes_bot.jpg");
+    background-position: right,center;
+    background-repeat: no-repeat;
+    width: 67px;
+    height: 67px;
+    display: inline-block; }
   #page #footer {
     text-align: left;
     color: #FFFFFF; }
