--- a/_footer.scss
+++ b/_footer.scss
@@ -4,7 +4,7 @@
 
 	div.footer-content{
 		padding:50px 0;
-		background-color:#364598;
+		background-color:#baad29;
 
 		ul{
 			padding:0;
@@ -22,7 +22,7 @@
 	div.copyrino{
 		text-align: center;
 		color: #606060;
-		background-color:#eeeeee;
+		background-color:#f4f2e9;
 		padding:20px 0;
 		.col-md-10{
 			padding:12px;
