--- a/style.scss
+++ b/style.scss
@@ -69,15 +69,19 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 		font-weight: bold;
 	}
 
+	h2.redes{
+		color:#baad29;
+	}
+
 	h4{
-		font-family:FuturaBT, Verdana, Geneva, sans-serif;
+		font-family: Verdana, Geneva, sans-serif;
 		font-size: 20px;
 		font-weight:bold;
 	}
 
 	h5{
-		font-family:FuturaBT, Verdana, Geneva, sans-serif;
-		font-size:17px;
+		font-family: Verdana, Geneva, sans-serif;
+		font-size:14px;
 		font-weight: normal;
 	}
 
