--- a/style.scss
+++ b/style.scss
@@ -49,6 +49,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 		background-color:#f3f2e9;
 		width:100%;
 		padding:30px 0; 
+		margin-bottom: 40px;
 	}
 
 	h1.small{
