--- a/style.css
+++ b/style.css
@@ -66,6 +66,18 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
     font-family: Verdana, Geneva, sans-serif;
     font-size: 14px;
     font-weight: normal; }
+  #page .videoWrapperb {
+    position: relative;
+    padding-bottom: 56.25%;
+    /* 16:9 */
+    padding-top: 25px;
+    height: 0; }
+  #page .videoWrapperb iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
   #page .videoWrapper {
     position: relative;
     padding-bottom: 26.25%;
@@ -99,6 +111,36 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
     left: 0px; }
     #page .bx-wrapper .bx-viewport .bx-clone {
       display: none !important; }
+  #page .btn-receba {
+    background-color: #f3f2e9;
+    font-weight: bold;
+    padding: 5px 25px;
+    border: 0;
+    color: #373737; }
+  #page .btn-receba:hover {
+    background-color: #F9F8F4; }
+  #page .input-receba-wrap {
+    margin-bottom: 5px;
+    color: #606060; }
+  #page .input-receba {
+    border: 0;
+    padding: 5px; }
+  #page .input-contato {
+    border: 0;
+    padding: 5px;
+    background-color: #f4f4f4; }
+  #page .input-contatob {
+    border: 0;
+    padding: 5px;
+    background-color: white; }
+  #page .btn-enviar {
+    background-color: #b5ab3a;
+    padding: 10px 50px;
+    color: white;
+    border: 0;
+    font-weight: bold; }
+  #page .btn-enviar:hover {
+    background-color: #dad38b; }
   #page #header {
     border-top: 10px solid #e6e3c0;
     margin-bottom: 20px; }
@@ -279,35 +321,37 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   #page div#content section#atelie {
     background-color: #f3f2e9;
     padding: 80px 0; }
-  #page div#content section#atelie-menu ul.btn-atelie {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    width: 100%;
-    margin: 0 auto; }
-    #page div#content section#atelie-menu ul.btn-atelie li {
-      -webkit-border-radius: 6px;
-      -moz-border-radius: 6px;
-      border-radius: 6px;
-      background-color: #b5ab3a;
-      float: left;
-      width: 13.78%;
-      margin-right: 0.5%; }
-      #page div#content section#atelie-menu ul.btn-atelie li a {
-        padding: 10px 10px;
-        color: white;
-        font-family: FuturaBT, Verdana, Geneva, sans-serif;
-        display: block;
-        font-size: 16px; }
-    #page div#content section#atelie-menu ul.btn-atelie li:hover {
-      background-color: #dfd99a; }
-    #page div#content section#atelie-menu ul.btn-atelie li:last-child {
-      margin-right: 0; }
-  #page div#content section#atelie-menu div.tab-content div.tab-pane {
-    text-align: left; }
-    #page div#content section#atelie-menu div.tab-content div.tab-pane article {
-      padding: 20px 0;
-      border-bottom: 1px solid #e5e5e5; }
+  #page div#content section#atelie-menu {
+    margin-bottom: 100px; }
+    #page div#content section#atelie-menu ul.btn-atelie {
+      margin: 0;
+      padding: 0;
+      list-style-type: none;
+      width: 100%;
+      margin: 0 auto; }
+      #page div#content section#atelie-menu ul.btn-atelie li {
+        -webkit-border-radius: 6px;
+        -moz-border-radius: 6px;
+        border-radius: 6px;
+        background-color: #b5ab3a;
+        float: left;
+        width: 13.78%;
+        margin-right: 0.5%; }
+        #page div#content section#atelie-menu ul.btn-atelie li a {
+          padding: 10px 10px;
+          color: white;
+          font-family: FuturaBT, Verdana, Geneva, sans-serif;
+          display: block;
+          font-size: 16px; }
+      #page div#content section#atelie-menu ul.btn-atelie li:hover {
+        background-color: #dfd99a; }
+      #page div#content section#atelie-menu ul.btn-atelie li:last-child {
+        margin-right: 0; }
+    #page div#content section#atelie-menu div.tab-content div.tab-pane {
+      text-align: left; }
+      #page div#content section#atelie-menu div.tab-content div.tab-pane article {
+        padding: 20px 0;
+        border-bottom: 1px solid #e5e5e5; }
   #page div#content section#detalhes {
     padding: 80px 0;
     background-color: #fcfcfc; }
@@ -453,6 +497,13 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
       color: white;
       text-align: left;
       padding: 25px 35px; }
+  #page div#content section#contato {
+    margin-bottom: 80px;
+    margin-top: 40px; }
+    #page div#content section#contato div.quadro {
+      padding: 25px 50px;
+      background-color: #f3f2e9;
+      margin-top: 10px; }
   #page div#content section#redes-bot {
     padding: 80px 0; }
     #page div#content section#redes-bot .redes_sociais_bot {
