--- a/style.scss
+++ b/style.scss
@@ -92,6 +92,20 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 		font-weight: normal;
 	}
 
+	.videoWrapperb {
+	    position: relative;
+	    padding-bottom: 56.25%; /* 16:9 */
+	    padding-top: 25px;
+	    height: 0;
+	}
+	.videoWrapperb iframe {
+	    position: absolute;
+	    top: 0;
+	    left: 0;
+	    width: 100%;
+	    height: 100%;
+	}	
+
 	.videoWrapper {
 	    position: relative;
 	    padding-bottom: 26.25%; /* 16:9 */
@@ -135,6 +149,48 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 		.bx-clone{
 		   display: none !important;
 		} 		
+	}
+
+	.btn-receba{ 
+		background-color: #f3f2e9;
+		font-weight:bold;
+		padding:5px 25px;
+		border:0;
+		color:#373737;
+	}
+	.btn-receba:hover{
+		background-color:#F9F8F4;
+	}
+	.input-receba-wrap{
+		margin-bottom: 5px;
+		color:#606060;
+	}
+	.input-receba{
+		border:0;
+		padding:5px
+	}
+
+	.input-contato{
+		border:0;
+		padding:5px;
+		background-color: #f4f4f4;
+	}
+
+	.input-contatob{
+		border:0;
+		padding:5px;
+		background-color: white;
+	}
+
+	.btn-enviar{
+		background-color:#b5ab3a;
+		padding:10px 50px;
+		color:white;
+		border:0;
+		font-weight: bold;
+	}
+	.btn-enviar:hover{
+		background-color:#dad38b;
 	}
 
 	@import 'header';
