--- a/style.css
+++ b/style.css
@@ -351,7 +351,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
       text-align: left; }
       #page div#content section#atelie-menu div.tab-content div.tab-pane article {
         padding: 20px 0;
-        border-bottom: 1px solid #e5e5e5; }
+        border-bottom: 1px solid #e5e5e5;
+        min-height: 153px; }
   #page div#content section#detalhes {
     padding: 80px 0;
     background-color: #fcfcfc; }
@@ -489,6 +490,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   #page div#content section#fotos-sobre {
     padding: 25px 0;
     background-color: #f3f2e9; }
+    #page div#content section#fotos-sobre img {
+      border: 5px solid white; }
   #page div#content section#form-contato {
     padding: 25px 0;
     background-color: #f3f2e9; }
@@ -498,7 +501,6 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
       text-align: left;
       padding: 25px 35px; }
   #page div#content section#contato {
-    margin-bottom: 80px;
     margin-top: 40px; }
     #page div#content section#contato div.quadro {
       padding: 25px 50px;
@@ -555,7 +557,9 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
     #page div#content section#atelie-menu ul.btn-atelie li {
       float: none;
       width: 100%;
-      margin-bottom: 10px; } }
+      margin-bottom: 10px; }
+    #page div#content section#atelie div.col-md-4 {
+      margin-bottom: 25px; } }
   #page #footer {
     text-align: left;
     color: #FFFFFF; }
