cardapio da semana

--- a/_content.scss
+++ b/_content.scss
@@ -41,6 +41,41 @@ div#content{
 				margin-right: 0;
 			}
 		}
+
+		ul.btn-cardapio{
+			margin:0;
+			padding:0;
+			list-style-type: none;
+			width: 300px;
+			margin: 0 auto;
+
+			li{
+				-webkit-border-radius: 6px; 
+				-moz-border-radius: 6px; 
+				border-radius: 6px; 
+				background-color:#b5ab3a;
+				float:left;
+				width: 49%;
+				margin-right: 0.5%;
+				
+				a{
+					padding:10px 10px;
+					color:white;
+					font-family:FuturaBT, Verdana, Geneva, sans-serif;
+					display: block;
+					font-size: 16px;
+				}					
+			}
+
+			li:hover{
+				background-color:#dfd99a;
+			}
+
+			li:last-child{
+				margin-right: 0;
+			}
+		}
+
 		div.tab-content{
 			div.tab-pane{
 				text-align: left;
